--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lib_management",
+  "name": "vue-project",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -23,7 +23,6 @@
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.1.4",
-    "@vitejs/plugin-vue-jsx": "^4.0.1",
     "@vitest/eslint-plugin": "1.1.7",
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.1.3",
@@ -38,6 +37,7 @@
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4",
     "vitest": "^2.1.4",
-    "vue-tsc": "^2.1.10"
+    "vue-tsc": "^2.1.10",
+    "vuetify": "^3.7.4"
   }
 }
