--- a/vue-project/tsconfig.node.json
+++ b/vue-project/tsconfig.node.json
@@ -11,9 +11,11 @@
     "composite": true,
     "noEmit": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-"forceConsistentCasingInFileNames": false,
+    "forceConsistentCasingInFileNames": false,
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "types": ["node"]
+    "types": [
+      "node"
+    ]
   }
 }
